--- a/app/src/main/res/layout/item_dev_dna_std_param.xml
+++ b/app/src/main/res/layout/item_dev_dna_std_param.xml
@@ -15,6 +15,7 @@
         android:layout_gravity="center_vertical"
         android:background="@drawable/shape_input_view_blue_bg"
         android:textSize="12sp"
+        android:enabled="false"
         android:textColor="#333"/>
 
     <EditText
