--- a/app/src/main/res/layout/activity_dev_dna_std_control.xml
+++ b/app/src/main/res/layout/activity_dev_dna_std_control.xml
@@ -12,44 +12,66 @@
         android:orientation="vertical"
         android:padding="10dp">
 
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/rv_params"
+        <RelativeLayout
+            android:id="@+id/rl_top"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@drawable/shape_stroke_right_round"
-            android:minHeight="50dp"
-            />
-        
+            android:layout_height="wrap_content">
+
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/rv_params"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@drawable/shape_stroke_right_round"
+                android:minHeight="50dp"
+                />
+
+            <EditText
+                android:id="@+id/et_cmd"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:background="@drawable/shape_input_view_blue_bg"
+                android:gravity="start"
+                android:minHeight="50dp"
+                android:scrollbarStyle="insideOverlay"
+                android:scrollbars="vertical"
+                android:textColor="@color/textDark"
+                android:visibility="gone"
+                android:textSize="13sp"/>
+        </RelativeLayout>
+
+
         <Button
             android:id="@+id/bt_select_param"
             style="@style/commonBtn"
-            android:layout_below="@+id/rv_params"
+            android:layout_below="@+id/rl_top"
             android:text="@string/select_param"
-            app:layout_widthPercent="33%"
+            app:layout_widthPercent="50%"
             />
-        
+
         <Button
             android:id="@+id/bt_add_param"
             style="@style/commonBtn"
+            android:layout_below="@+id/rl_top"
             android:layout_toRightOf="@+id/bt_select_param"
-            android:layout_below="@+id/rv_params"
             android:text="@string/add_param"
+            android:visibility="gone"
             app:layout_widthPercent="33%"
             />
 
         <Button
             android:id="@+id/bt_paste_params"
             style="@style/commonBtn"
-            android:layout_below="@+id/rv_params"
+            android:layout_below="@+id/rl_top"
             android:layout_toRightOf="@+id/bt_add_param"
             android:text="@string/paste_param"
-            app:layout_widthPercent="33%"
+            app:layout_widthPercent="50%"
             />
 
         <Button
             android:id="@+id/bt_get"
             style="@style/commonBtn"
-            android:layout_below="@+id/bt_add_param"
+            android:layout_below="@+id/bt_select_param"
             android:layout_marginTop="20dp"
             android:text="Get"
             app:layout_widthPercent="50%"
@@ -58,7 +80,7 @@
         <Button
             android:id="@+id/bt_set"
             style="@style/commonBtn"
-            android:layout_below="@+id/bt_add_param"
+            android:layout_below="@+id/bt_select_param"
             android:layout_marginTop="20dp"
             android:layout_toRightOf="@+id/bt_get"
             android:text="Set"
@@ -124,11 +146,11 @@
             android:layout_below="@+id/query_profile"
             android:layout_marginTop="10dp"
             android:background="@drawable/shape_input_view_blue_bg"
-            android:minHeight="200dp"
-            android:textSize="13sp"
             android:gravity="start"
+            android:minHeight="200dp"
             android:scrollbarStyle="insideOverlay"
             android:scrollbars="vertical"
-            android:textColor="@color/textDark"/>
+            android:textColor="@color/textDark"
+            android:textSize="13sp"/>
     </android.support.percent.PercentRelativeLayout>
 </ScrollView>
