--- a/app/src/main/res/layout/activity_dev_dna_std_control.xml
+++ b/app/src/main/res/layout/activity_dev_dna_std_control.xml
@@ -22,19 +22,36 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@drawable/shape_stroke_right_round"
-                android:minHeight="50dp"
+                android:minHeight="85dp"
                 />
 
             <EditText
                 android:id="@+id/et_cmd"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
                 android:background="@drawable/shape_input_view_blue_bg"
                 android:gravity="start"
                 android:minHeight="50dp"
+                android:paddingLeft="5dp"
+                android:paddingRight="5dp"
                 android:scrollbarStyle="insideOverlay"
                 android:scrollbars="vertical"
+                android:textColor="@color/textDark"
+                android:visibility="gone"
+                android:textSize="13sp"/>
+            <EditText
+                android:id="@+id/et_itf"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
+                android:layout_below="@+id/et_cmd"
+                android:background="@drawable/shape_input_view_blue_bg"
+                android:gravity="center_vertical"
+                android:minHeight="30dp"
+                android:paddingLeft="5dp"
+                android:paddingRight="5dp"
+                android:text="dev_ctrl"
+                android:hint="dev_ctrl"
                 android:textColor="@color/textDark"
                 android:visibility="gone"
                 android:textSize="13sp"/>
